feat: allow users to save, unsave and view saved posts